--- a/indexGogo.html
+++ b/indexGogo.html
@@ -916,7 +916,7 @@
               <div class="hotNewsTitleText"><h2>Онцлох мэдээ</h2></div>
             </div>
 
-            <div class="hotNews1"><a href="">
+            <div class="hotNews1">
               <div class="hotNews1Img">
                 <a href="#"
                   >Унших<i
@@ -948,11 +948,11 @@
                       11 минутын өмнө</a
                     >
                   </div></a> -->
-              </div>
+            </div>
           </div>
-          </div>
+        </div>
 
-          <!-- <div class="trendNews">
+        <!-- <div class="trendNews">
             <div class="trendNewsTitle">trendNewsTitle</div>
             <div class="trendNews1">trendNews1</div>
             <div class="trendNews1">trendNews2</div>
